# sqlclaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  KNOWLEDGE.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
openclaw/: Dockerfile  SOUL.md  openclaw.json
openclaw/skills/: chart_generator.py  knowledge_search.js  knowledge_search.py  query_validator.js  send_chart.js
skillhub/backend/: config.py  main.py
skillhub/backend/routers/: dashboard.py  database.py  logs.py  security.py  skills.py
skillhub/backend/services/: db_stats.py  log_parser.py  skill_manager.py
skillhub/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
skillhub/frontend/src/: App.jsx  index.css
skillhub/frontend/src/api/: client.js
skillhub/frontend/src/components/: Badge.jsx  Layout.jsx  LiveLogs.jsx  StatCard.jsx
skillhub/frontend/src/pages/: Dashboard.jsx  Database.jsx  QueryLogs.jsx  Security.jsx  Skills.jsx
sql/: create_readonly_user.sql  drop_all.sql  schema.sql
tests/integration/: test_api.py
tests/unit/: test_clean_data.py
utils/: clean_data.py  db.py  embed_knowledge.py  fetch_dataset.py  load_data.py
